--- a/src/Component/Home/Story.css
+++ b/src/Component/Home/Story.css
@@ -6,8 +6,8 @@
 } */
 .story-box{
 
-     
-    margin-left: -270px;
+      width: 700px;
+    margin-left: 30px;
     position: relative;
     margin-top: 0px;
     overflow: hidden;
