--- a/src/Component/Sidebar/Sidebar.css
+++ b/src/Component/Sidebar/Sidebar.css
@@ -144,6 +144,7 @@
   
   .sidebar button span {
     font-size: 17px;
+    background-color: white;
   }
   
   .sidebar > nav {
@@ -157,12 +158,13 @@
     margin-top: auto;
   }
 
-.dropbutton :hover{
-       background: none;
+
+.icon {
+  background: none;
 }
-
-
-
+.no-arrow-dropdown::after {
+  display: none !important;
+}
 
 
 
