--- a/src/Component/profail/profail.css
+++ b/src/Component/profail/profail.css
@@ -54,5 +54,37 @@
               }
  .dicription{
 
-  margin-left: 400px;
+  margin-left: 630px;
+  font-weight: 600;
+  margin-top: 10px;
               }
+
+.footer{
+      margin-left: 600px;
+      display: flex;
+      margin-top: 250px;
+      
+}         
+.item-btn{
+
+       margin: 30px;
+       font-size: small;
+       font-weight: 600;
+       border: none;
+    color: gray;
+       
+
+}     
+.line{
+      width: 700px;
+   
+    
+}
+.item-btn:hover{
+       color: black;
+}
+.imagez{
+      margin-left: 200px;
+       width: 300px;
+       height: 250px;
+}
