--- a/src/Component/profail/profail.css
+++ b/src/Component/profail/profail.css
@@ -84,7 +84,21 @@
        color: black;
 }
 .imagez{
-      margin-left: 200px;
+    
        width: 300px;
        height: 250px;
+      
+      
+}
+.post{
+    display: flex; 
+
+    /* width: 200px;
+    height: 250px; */
+}
+.post-item{
+    margin-left: 200px;
+    padding: 30px;
+     width:100px;
+
 }
