--- a/src/Component/Home/Home.css
+++ b/src/Component/Home/Home.css
@@ -1,4 +1,4 @@
-.main-container{
+/* .main-container{
       width: 100%;
       background-color: white;
 }
@@ -28,4 +28,4 @@
       .right-section{
          right: 7px;
       }
-}
+} */
